force-app/main/default/objects/Clinical_Trial_Profile__c/Clinical_Trial_Profile__c.object-meta.xml
<CustomObject>
    <description>All clinical trial details which exist at clinicaltrials.gov, with additional metadata describing the inclusion / exclusion criteria, and identification of which clinical trials are awarded to QuintilesIMS</description>
    <label>Clinical Trial Profile</label>
    <nameField>
        <displayFormat>S-{00000}</displayFormat>
        <label>Clinical Trial Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Trial Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>
 