force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>Age Criteria</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Age Criteria</inlineHelpText>
    <label>Age</label>
    <length>255</length>

    <type>Text</type>
</CustomField>