force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Banner_Dispose_Offset_Time__c.field-meta.xml
<CustomField>
    <fullName>Banner_Dispose_Offset_Time__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Banner Dispose Offset Time</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>