force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Baseline_Survey_URL__c.field-meta.xml
<CustomField>
    <fullName>Baseline_Survey_URL__c</fullName>
    <label>Baseline Survey URL</label>
    <type>Url</type>
</CustomField>