force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Bell_Notification_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Bell_Notification_Reminder__c</fullName>
    <label>Bell Notification Reminder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>