force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Brief_Summary__c.field-meta.xml
<CustomField>
    <fullName>Brief_Summary__c</fullName>
    <description>Summary of Title</description>
    <inlineHelpText>This field should map to the &quot;Brief Summary&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Brief Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>