force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Bypass_Fields_for_TMDH__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Fields_for_TMDH__c</fullName>
    <label>Bypass Fields for TMDH</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>