force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Chart_Review__c.field-meta.xml
<CustomField>
    <fullName>Chart_Review__c</fullName>
    <inlineHelpText>HCP/Physician Chart Review Amount</inlineHelpText>
    <label>Chart Review</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>