force-app/main/default/objects/Clinical_Trial_Profile__c/fields/ClinicalTrials_gov_URL__c.field-meta.xml
<CustomField>
    <fullName>ClinicalTrials_gov_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>This field should map to the URL of the study within clinicaltrials.gov. It should end at the NCT ID and not have any additional search parameters suffixed.</inlineHelpText>
    <label>ClinicalTrials.gov URL</label>

    <type>Url</type>
</CustomField>