force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Co_morbidity__c.field-meta.xml
<CustomField>
    <fullName>Co_morbidity__c</fullName>
    <description>Other conditions &amp; diseases that the patient currently has</description>
    <inlineHelpText>Other conditions &amp; diseases that the patient currently has</inlineHelpText>
    <label>Co-morbidity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>