force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Community_Template__c.field-meta.xml
<CustomField>
    <fullName>Community_Template__c</fullName>
    <description>Name of community template from Community Template Metadata. Not required. &#39;Default&#39; template used as default value if this filed is empty or defined template name not exist</description>
    <label>Community Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>