force-app/main/default/objects/Clinical_Trial_Profile__c/fields/CommunityTemplate__c.field-meta.xml
<CustomField>
    <fullName>CommunityTemplate__c</fullName>
    <label>Community Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>IQVIA Patient Portal</label>
            </value>
            <value>
                <fullName>GSK</fullName>
                <label>GSK Pan Oncology</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>