force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Condition_s_Therapeutic_Area__c.field-meta.xml
<CustomField>
    <fullName>Condition_s_Therapeutic_Area__c</fullName>
    <description>Therapeutic Area</description>
    <inlineHelpText>This field should map to the &quot;Condition&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Condition(s) Therapeutic Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>