force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Currency_for_Below_Amounts__c.field-meta.xml
<CustomField>
    <fullName>Currency_for_Below_Amounts__c</fullName>
    <label>Currency for Below Amounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
                <default>true</default>
                <label>USD</label>
            </value>
            <value>
                <fullName>EUR</fullName>
            </value>
            <value>
                <fullName>GBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>