force-app/main/default/objects/Clinical_Trial_Profile__c/fields/DCT_Platform__c.field-meta.xml
<CustomField>
    <fullName>DCT_Platform__c</fullName>
    <inlineHelpText>This field is dependent on the value of Promote to DCT</inlineHelpText>
    <label>DCT Platform</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Promote_to_SH__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Study Hub</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>