force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Delayed_No_Of_Days__c.field-meta.xml
<CustomField>
    <fullName>Delayed_No_Of_Days__c</fullName>
    <label>Delayed No.Of Days</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>