force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Demographic__c.field-meta.xml
<CustomField>
    <fullName>Demographic__c</fullName>
    <description>Demographics of patient profile</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Demographics of patient profile</inlineHelpText>
    <label>Demographic</label>
    <length>255</length>

    <type>Text</type>
</CustomField>