force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Detailed_Description__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Description__c</fullName>
    <description>Study Detail Description</description>
    <inlineHelpText>This field should map to the &quot;Detailed Description&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Detailed Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>