force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>ICD-9 and 10 codes or may just list diagnosis</description>
    <inlineHelpText>ICD-9 and 10 codes or may just list diagnosis</inlineHelpText>
    <label>Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>