force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Digital_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Digital_Recruitment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Digital Recruitment</label>
    <type>Checkbox</type>
</CustomField>