force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Document_Upload_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Document_Upload_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Upload Is Available</label>
    <type>Checkbox</type>
</CustomField>