force-app/main/default/objects/Clinical_Trial_Profile__c/fields/E_Consent_Configuration__c.field-meta.xml
<CustomField>
    <fullName>E_Consent_Configuration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>E-Consent Configuration</label>
    <type>Checkbox</type>
</CustomField>