force-app/main/default/objects/Clinical_Trial_Profile__c/fields/ECOA_Is_Avaialble__c.field-meta.xml
<CustomField>
    <fullName>ECOA_Is_Avaialble__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ECOA Is Avaialble</label>
    <type>Checkbox</type>
</CustomField>