force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Eligibility_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Criteria__c</fullName>
    <description>Examples include Demographic, Age, Gender, Medication History, Formulary, Diagnosis, Co-morbidity, ICD 9/10 Code, etc.</description>
    <inlineHelpText>Examples include Demographic, Age, Gender, Medication History, Formulary, Diagnosis, Co-morbidity, ICD 9/10 Code, etc.</inlineHelpText>
    <label>Eligibility Criteria</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>