force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Enable_RP_Outreach_Email__c.field-meta.xml
<CustomField>
    <fullName>Enable_RP_Outreach_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Enable RP Outreach Email</label>
    <type>Checkbox</type>
</CustomField>