force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Enrolled_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_End_Date__c</fullName>
    <label>Enrolled End Date</label>
    <type>Date</type>
</CustomField>