force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Enrolled_Or_Randomized_Consent_Available__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Or_Randomized_Consent_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enrolled Or Randomized Consent Available</label>
    <type>Checkbox</type>
</CustomField>