force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Enrollment_Actual__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Actual__c</fullName>
    <inlineHelpText>Entered by SPNL when setting up Clinical Study obtained from the Clinical team. This should be updated at a regular cadence to identify if we need to continue to use CRCP for a study</inlineHelpText>
    <label>Enrollment Actual</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>