force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Enrollment_Target__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Target__c</fullName>
    <inlineHelpText>This field should map to the &quot;Estimated Enrollment&quot; field in clinicaltrials.gov.</inlineHelpText>
    <label>Enrollment Target</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>