force-app/main/default/objects/Clinical_Trial_Profile__c/fields/ePR_enabled__c.field-meta.xml
<CustomField>
    <fullName>ePR_enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ePR enabled</label>
    <type>Checkbox</type>
</CustomField>