force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <description>Estimated recruitment completion date.</description>
    <inlineHelpText>Estimated recruitment completion date.</inlineHelpText>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>