force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Estimated_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Enrollment__c</fullName>
    <description>Estimated number of participants in a clinical study.</description>
    <inlineHelpText>Estimated number of participants in a clinical study.</inlineHelpText>
    <label>Estimated Enrollment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>