force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Estimated_Primary_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Primary_Completion_Date__c</fullName>
    <description>Date Final data collection date for primary outcome measure.</description>
    <inlineHelpText>Date Final data collection date for primary outcome measure.</inlineHelpText>
    <label>Estimated Primary Completion Date</label>
    <type>Date</type>
</CustomField>