force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Final_Consent_Required__c.field-meta.xml
<CustomField>
    <fullName>Final_Consent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Consent Required</label>
    <type>Checkbox</type>
</CustomField>