force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Formulary__c.field-meta.xml
<CustomField>
    <fullName>Formulary__c</fullName>
    <description>Formulary for the drug</description>
    <inlineHelpText>Formulary for the drug</inlineHelpText>
    <label>Formulary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>