force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Gender__c.field-meta.xml
<CustomField>
    <fullName>Gender__c</fullName>
    <description>Sexes Eligible for Study.</description>
    <inlineHelpText>Sexes Eligible for Study.</inlineHelpText>
    <label>Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>