force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Has_Data_Monitoring_Committee__c.field-meta.xml
<CustomField>
    <fullName>Has_Data_Monitoring_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This field should map to the &quot;Has Data Monitoring Committee&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Has Data Monitoring Committee</label>
    <type>Checkbox</type>
</CustomField>