force-app/main/default/objects/Clinical_Trial_Profile__c/fields/HCP_Contacted_Potential_Participant__c.field-meta.xml
<CustomField>
    <fullName>HCP_Contacted_Potential_Participant__c</fullName>
    <inlineHelpText>HCP/Physician HCP Contacted Potential Participant Amount</inlineHelpText>
    <label>HCP Contacted Potential Participant</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>