force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Include_in_patient_trial_search__c.field-meta.xml
<CustomField>
    <fullName>Include_in_patient_trial_search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include in Patient Trial Search</label>
    <type>Checkbox</type>
</CustomField>