force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Initial_Visit_Required__c.field-meta.xml
<CustomField>
    <fullName>Initial_Visit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Initial Visit Required</label>
    <type>Checkbox</type>
</CustomField>