force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Interventions__c.field-meta.xml
<CustomField>
    <fullName>Interventions__c</fullName>
    <description>A process or action that is the focus of a clinical study.</description>
    <inlineHelpText>This field should map to the &quot;Intervention&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Interventions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>