force-app/main/default/objects/Clinical_Trial_Profile__c/fields/IQVIA_Outreach__c.field-meta.xml
<CustomField>
    <fullName>IQVIA_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IQVIA Outreach</label>
    <type>Checkbox</type>
</CustomField>