force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Is_Program__c.field-meta.xml
<CustomField>
    <fullName>Is_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Program</label>
    <type>Checkbox</type>
</CustomField>