force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Lifestyle__c.field-meta.xml
<CustomField>
    <fullName>Lifestyle__c</fullName>
    <description>Smoking, alcohol, etc.</description>
    <inlineHelpText>Smoking, alcohol, etc.</inlineHelpText>
    <label>Lifestyle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>