force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Link_to_ePR_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Link_to_ePR_Campaign__c</fullName>
    <label>Link to ePR Campaign</label>
    <type>Url</type>
</CustomField>