force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Link_to_Medical_Record_Review__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Medical_Record_Review__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Unique URL generated by Survey Gizmo created by SPNL in collaboration with IQVIA Digital Media.  This field must be populated if the study requires medical record review.</inlineHelpText>
    <label>Link to Medical Record Review</label>

    <type>Url</type>
</CustomField>