force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Link_to_Pre_screening__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Pre_screening__c</fullName>
    <inlineHelpText>Unique URL generated by Survey Gizmo created by SPNL in collaboration with IQVIA Digital Media.  This field must be populated if the study requires pre-screening.</inlineHelpText>
    <label>Link to Pre-screening</label>
    <type>Url</type>
</CustomField>