force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Logged_Out_Days_Notification__c.field-meta.xml
<CustomField>
    <fullName>Logged_Out_Days_Notification__c</fullName>
    <label>Logged Out Days Notification</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>