force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Max_Prescreen_Log_CAP_per_Study__c.field-meta.xml
<CustomField>
    <fullName>Max_Prescreen_Log_CAP_per_Study__c</fullName>
    <label>Max Prescreen Log CAP per Study</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>