force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Max_Referral_CAP_Per_PI__c.field-meta.xml
<CustomField>
    <fullName>Max_Referral_CAP_Per_PI__c</fullName>
    <label>Max Referral CAP Per PI</label>
    <precision>18</precision>
    <scale>0</scale>

    <type>Number</type>
</CustomField>