force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Max_Referral_CAP_Per_Study__c.field-meta.xml
<CustomField>
    <fullName>Max_Referral_CAP_Per_Study__c</fullName>
    <label>Max Referral CAP Per Study</label>
    <precision>18</precision>
    <scale>0</scale>
<!--    <trackHistory>true</trackHistory>-->
    <type>Number</type>
</CustomField>