force-app/main/default/objects/Clinical_Trial_Profile__c/fields/MDM_Cluster_ID__c.field-meta.xml
<CustomField>
    <fullName>MDM_Cluster_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM Cluster ID</label>
    <type>TextArea</type>
</CustomField>