force-app/main/default/objects/Clinical_Trial_Profile__c/fields/MDM_Protocol_Entity_Id__c.field-meta.xml
<CustomField>
    <fullName>MDM_Protocol_Entity_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM Protocol Entity Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>