force-app/main/default/objects/Clinical_Trial_Profile__c/fields/MDM_Sponsor_Name__c.field-meta.xml
<CustomField>
    <fullName>MDM_Sponsor_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MDM Sponsor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>