force-app/main/default/objects/Clinical_Trial_Profile__c/fields/MDM_trigger_status__c.field-meta.xml
<CustomField>
    <fullName>MDM_trigger_status__c</fullName>
    <label>MDM trigger status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>