force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Media_outreach_Provider__c.field-meta.xml
<CustomField>
    <fullName>Media_outreach_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Media Outreach Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Clinical_Trial_Profiles</relationshipName>
    <type>Lookup</type>
</CustomField>