force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Medication_History__c.field-meta.xml
<CustomField>
    <fullName>Medication_History__c</fullName>
    <description>Patient medical history.</description>
    <inlineHelpText>Patient medical history.</inlineHelpText>
    <label>Medication History</label>
    <length>255</length>
    <type>Text</type>
</CustomField>