force-app/main/default/objects/Clinical_Trial_Profile__c/fields/NCT_Number__c.field-meta.xml
<CustomField>
    <fullName>NCT_Number__c</fullName>
    <description>A unique identification code given to each clinical study registered on ClinicalTrials.gov. The format is &quot;NCT&quot; followed by an 8-digit number</description>
    <inlineHelpText>A unique identification code given to each clinical study registered on ClinicalTrials.gov. The format is &quot;NCT&quot; followed by an 8-digit number</inlineHelpText>
    <label>NCT Number</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>