force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Official_Title__c.field-meta.xml
<CustomField>
    <fullName>Official_Title__c</fullName>
    <inlineHelpText>This field should map to the &quot;Official Title&quot; field in clinicaltrials.gov</inlineHelpText>
    <label>Official Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>