force-app/main/default/objects/Clinical_Trial_Profile__c/fields/OrgID__c.field-meta.xml
<CustomField>
    <fullName>OrgID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Sponsor unique Org ID in Securiti</inlineHelpText>
    <label>OrgID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>