force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Orientation__c.field-meta.xml
<CustomField>
    <fullName>Orientation__c</fullName>
    <inlineHelpText>HCP/Physician Orientation Amount</inlineHelpText>
    <label>Orientation</label>
    <precision>18</precision>
    <scale>2</scale>

    <type>Currency</type>
</CustomField>