force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Orientation_Required__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Orientation Required</label>
<!--    <trackHistory>true</trackHistory>-->
    <type>Checkbox</type>
</CustomField>