force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Override_Description__c.field-meta.xml
<CustomField>
    <fullName>Override_Description__c</fullName>
    <inlineHelpText>If populated, this will be the description seen within the community by PIs, HCPs, Participants, etc. describing the clinical study.  This will &quot;override&quot; display of the &quot;Detailed Description&quot; if &quot;Override Description&quot; is populated.</inlineHelpText>
    <label>Override Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>