force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Override_Exclusion_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Override_Exclusion_Criteria__c</fullName>
    <description>Friendly description of exclusion criteria for use in internal portal</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Exclusion Criteria</label>
    <length>32768</length>
<!--    <trackHistory>true</trackHistory>-->
    <type>Html</type>
</CustomField>