force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Override_Inclusion_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Override_Inclusion_Criteria__c</fullName>
    <description>Friendly description for internal use</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Override Inclusion Criteria</label>
    <length>32768</length>
<!--    <trackHistory>true</trackHistory>-->
    <type>Html</type>
</CustomField>