force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Override_Recruitment_Status__c.field-meta.xml
<CustomField>
    <fullName>Override_Recruitment_Status__c</fullName>
    <inlineHelpText>Ability for SPNL or Admins to override the recruiting status of a clinical study.</inlineHelpText>
    <label>Override Recruitment Status</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Actively Enrolling</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Enrollment Closed</fullName>
            </value>
            <value>
                <fullName>No_Longer_Enrolling</fullName>
                <label>No Longer Enrolling</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>