force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Override_Status_Updated_By__c.field-meta.xml
<CustomField>
    <fullName>Override_Status_Updated_By__c</fullName>
    <description>Populated via workflow rule when the Override Status field is changed.  Shows the profile of the user who changed the field. Validation created around who can change this field by profile.</description>
    <inlineHelpText>Populated via workflow rule when the Override Status field is changed.</inlineHelpText>
    <label>Override Status Updated By</label>
    <length>85</length>
    <type>Text</type>
</CustomField>