force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Participant_Visit_Result_Group__c.field-meta.xml
<CustomField>
        <fullName>Participant_Visit_Result_Group__c</fullName>
        <label>Participant Visit Result Group</label>
        <length>100</length>
        <type>Text</type>
</CustomField>