force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Participant_Workflow_Final_Step__c.field-meta.xml
<CustomField>
    <fullName>Participant_Workflow_Final_Step__c</fullName>
    <label>Participant Workflow Final Step</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment</fullName>
                <default>true</default>
                <label>Enrollment</label>
            </value>
            <value>
                <fullName>Randomization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>