force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Participating_in_Digital_Recruitment__c.field-meta.xml
<CustomField>
    <fullName>Participating_in_Digital_Recruitment__c</fullName>
    <label>Participating in Digital Recruitment</label>

    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>