force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Participating_in_Patient_Portal__c.field-meta.xml
<CustomField>
    <fullName>Participating_in_Patient_Portal__c</fullName>
    <label>Participating in Patient Portal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>