force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Participating_in_Rocket_Referral__c.field-meta.xml
<CustomField>
    <fullName>Participating_in_Rocket_Referral__c</fullName>
    <label>Participating in Rocket Referral</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Participating_in_Digital_Recruitment__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Y_N_Unknown</valueSetName>
    </valueSet>
</CustomField>