force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Patient_Auth_Upload_Required__c.field-meta.xml
<CustomField>
    <fullName>Patient_Auth_Upload_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Form has to be uploaded as a Study Resource document</inlineHelpText>
    <label>Patient Auth. Upload Required</label>
    <type>Checkbox</type>
</CustomField>