force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Patient_Outreach_Info__c.field-meta.xml
<CustomField>
    <fullName>Patient_Outreach_Info__c</fullName>
    <label>Patient Outreach Info</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>