force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Patient_Portal_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Patient_Portal_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Patient Portal Enabled</label>
    <type>Checkbox</type>
</CustomField>