force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Patient_study_search__c.field-meta.xml
<CustomField>
    <fullName>Patient_study_search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Patient study search</label>
    <type>Checkbox</type>
</CustomField>