force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Payment_Is_Available__c.field-meta.xml
<CustomField>
    <fullName>Payment_Is_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Is Available</label>
    <type>Checkbox</type>
</CustomField>