force-app/main/default/objects/Clinical_Trial_Profile__c/fields/Pin_Point_ProjectId__c.field-meta.xml
<CustomField>
    <fullName>Pin_Point_ProjectId__c</fullName>
    <label>PinPoint ProjectId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>