force-app/main/default/objects/Clinical_Trial_Profile__c/fields/PPTemplate__c.field-meta.xml
<CustomField>
    <fullName>PPTemplate__c</fullName>
    <label>PP Template</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PP 1.0</fullName>
            </value>
            <value>
                <fullName>PP 2.0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>